@@ -45,6 +45,13 @@ void dgm::App::run()
         updateState(states.size() - 1);
 
         window.clear(getTopState().getClearColor());
+
+        // NOTE: Setting view here fixes many issues with
+        // dynamic resolution chanegs.
+        window.setView(
+            sf::Vector2f(window.getSize() / 2u),
+            sf::Vector2f(window.getSize()));
+
         drawState(states.size() - 1);
         window.display();
 
